--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -10,11 +10,15 @@ output:
 ```{r,message=FALSE,echo=FALSE}
 library(tidyverse)
 library(mosaic)
-library(data.table)
+library(plyr)
+
 trap = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_trapping_in.csv')
 sort = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_sorting_in.csv')
 id = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_identification_in.csv')
 pathogen = read.csv('N:/Science/FSU/Intern Projects/2107_CharlotteRoiger/mos_pathogenresults_in.csv')
+taxonomy.df = read.csv("~/mosquito-intern/resources/mosquito_taxonomy.csv")
+precip.df = read.csv('~/mosquito-intern/resources/precipitation.csv')
+temp.df = read.csv("~/mosquito-intern/resources/temperature_maximum.csv")
 source('~/mosquito-intern/code/get_NEON_location.R')
 
 
@@ -49,6 +53,9 @@ trap$lon2<-ifelse(is.na(trap$lon)==TRUE, trap$pdaDecimalLongitude,trap$lon)
 #Extracting Year Information for trap
 trap$Year<-substr(trap$collectDate,1,4)
 
+#Exctracting date information for trap
+trap$Date<-substr(trap$setDate,1,10)
+
 #Creating a dataframe with only the unique plotIDs and lat2 lon2 data for merging
 uniquetrap<-trap[!duplicated(trap[,1]),c("uniquePlotIDs","lat2","lon2")]
 
@@ -64,6 +71,27 @@ id$Year<-substr(id$collectDate,1,4)
 #Chaning year to be a factor rather than a character
 id$Year<-as.factor(id$Year)
 
+#Exctracting date information for id
+id$Date<-substr(id$setDate,1,10)
+
+#Broad Site ID variable
+id$siteID<-substr(id$uniquePlotIDs,1,4)
+
+#merging id with temp data
+id <- merge(x = temp.df, y = id, by.y = c('siteID','Date'), by.x = c('siteID','date'), all.y = TRUE)
+
+#Converting temperature to proper value
+id$value<-id$value/10
+names(id)[5]<-"Max.TempC"
+
+#Merge id with precip data
+id <- merge(x = precip.df[,c(1,4,9)], y = id, by.y = c('siteID', 'date'), by.x = c('siteID', 'date'), all.y = TRUE)
+
+#converting temperature to proper value and renaming
+id$value<-id$value/10
+names(id)[3]<-"Precipmm"
+
+
 #Working on time difference offset variable 
 
 #Checks to see if all obs are on the same day or two different days and nothing else
@@ -72,6 +100,7 @@ tally(substr(id$setDate,9,10)!=substr(id$collectDate,9,10))
 
 #Variable that contains the time difference between set and collection in hours
 id$Timediff<-ifelse(substr(id$setDate,9,10)!=substr(id$collectDate,9,10), 24 - ((as.numeric(substr(id$setDate,15,16))/60)+(as.numeric(substr(id$setDate,12,13)))) + ((as.numeric(substr(id$collectDate,15,16))/60)+(as.numeric(substr(id$collectDate,12,13)))),((as.numeric(substr(id$collectDate[8],15,16))/60)+(as.numeric(substr(id$collectDate[8],12,13)))) - ((as.numeric(substr(id$setDate[8],15,16))/60)+(as.numeric(substr(id$setDate[8],12,13)))))
+
 
 #Creating subsets based on year for id df
 levels(id$Year)
@@ -82,15 +111,6 @@ id2014<-id[id$Year==2014,]
 id2015<-id[id$Year==2015,]
 id2016<-id[id$Year==2016,]
 
-#Working on writing a function that would automatically subset by year? My issue is in the naming of the dataframe then importing it to the global environment every time I run the function the df gets named "dfname" rather than the desired input
-
-#SubsetYear<-function(df,year){
-  #dfname <-readline(prompt = "What is the desired name of your new dataframe: ")
-  #dfname<-as.character(dfname)
-  #dfname <<-df[df$Year==year,]
- #}
-#SubsetYear(id,2012)
-
 ```
 
 ###Species Richness Dataframes
@@ -99,86 +119,22 @@ id2016<-id[id$Year==2016,]
 #If I merge dataframes then it automatically removes the null plot ID
 
 #Creation of a dataframe that maps plotIds to number of unique scientific names
-specrich <-data.frame(sort(uniquePlotIDs),with(id, tapply(id$scientificName, id$uniquePlotIDs, FUN = function(x)
-length(unique(x)))), row.names = NULL)
+specrich <- ddply(id, ~ uniquePlotIDs + collectDate + Year + Precipmm + Max.TempC, summarize, num_species = length(scientificName))
 
-#Renaming Columns
-names(specrich)[1]<-"uniquePlotIDs"
-names(specrich)[2]<-"Species.richness"
 
 #Merging to get lat2 lon2 data
 specrich <- merge(x = uniquetrap, y = specrich, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
 
+#Changin year to a factor
+specrich$Year<-as.factor(specrich$Year)
 
-#Creation of a 2012 dataframe that maps plotIds to number of unique scientific names
-specrich2012<-data.frame(sort(uniquePlotIDs),with(id2012, tapply(id2012$scientificName, id2012$uniquePlotIDs, FUN = function(x)
-length(unique(x)))), row.names = NULL)
+#Creation of Year subsets
+specrich2012 <- specrich[specrich$Year==2012,]
+specrich2013 <- specrich[specrich$Year==2013,]
+specrich2014 <- specrich[specrich$Year==2014,]
+specrich2015 <- specrich[specrich$Year==2015,]
+specrich2016 <- specrich[specrich$Year==2016,]
 
-#Renaming Columns
-names(specrich2012)[1]<-"uniquePlotIDs"
-names(specrich2012)[2]<-"Species.richness"
-
-#Merging to get lat2 lon2 data
-specrich2012 <- merge(x = uniquetrap, y = specrich2012, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
-
-#Creation of a 2013 dataframe that maps plotIds to number of unique scientific names
-specrich2013<-data.frame(sort(uniquePlotIDs),with(id2013, tapply(id2013$scientificName, id2013$uniquePlotIDs, FUN = function(x)
-length(unique(x)))), row.names = NULL)
-
-#Renaming Columns
-names(specrich2013)[1]<-"uniquePlotIDs"
-names(specrich2013)[2]<-"Species.richness"
-
-#Merging to get lat2 lon2 data
-specrich2013 <- merge(x = uniquetrap, y = specrich2013, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
-
-#Creation of a 2014 dataframe that maps plotIds to number of unique scientific names
-specrich2014<-data.frame(sort(uniquePlotIDs),with(id2014, tapply(id2014$scientificName, id2014$uniquePlotIDs, FUN = function(x)
-length(unique(x)))), row.names = NULL)
-
-#Renaming Columns
-names(specrich2014)[1]<-"uniquePlotIDs"
-names(specrich2014)[2]<-"Species.richness"
-
-#Merging to get lat2 lon2 data
-specrich2014 <- merge(x = uniquetrap, y = specrich2014, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
-
-#Creation of a 2015 dataframe that maps plotIds to number of unique scientific names
-specrich2015<-data.frame(sort(uniquePlotIDs),with(id2015, tapply(id2015$scientificName, id2015$uniquePlotIDs, FUN = function(x)
-length(unique(x)))), row.names = NULL)
-
-#Renaming Columns
-names(specrich2015)[1]<-"uniquePlotIDs"
-names(specrich2015)[2]<-"Species.richness"
-
-#Merging to get lat2 lon2 data
-specrich2015 <- merge(x = uniquetrap, y = specrich2015, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
-
-#Creation of a 2016 dataframe that maps plotIds to number of unique scientific names
-specrich2016<-data.frame(sort(uniquePlotIDs),with(id2016, tapply(id2016$scientificName, id2016$uniquePlotIDs, FUN = function(x)
-length(unique(x)))), row.names = NULL)
-
-#Creation of df to account for time offset 2016
-id2016s<-id2016[sort(unique(id2016$uniquePlotIDs)),c("uniquePlotIDs", "Timediff")]
-
-#Renaming Columns
-names(specrich2016)[1]<-"uniquePlotIDs"
-names(specrich2016)[2]<-"Species.richness"
-
-#Merging to get lat2 lon2 data
-specrich2016 <- merge(x = id2016s, y = specrich2016, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
-
-
-#Applying Loop Code to the specrich dataframe
-#Latitude.sr<-c()
-#Longitude.sr<-c()
-#for (i in 1:nrow(specrich.df)){
-  #j<-grep(specrich.df$plotID[i],latlon.df$uniquePlotIDs)
-  #Latitude.sr[i]<-latlon.df$lat[j]
-  #Longitude.sr[i]<-latlon.df$lon[j]
-#}
-
-#specrich.df<-data.frame(specrich.df, Latitude.sr, Longitude.sr)
 ```
 
 ###Some Data Poking (Exploring)
@@ -270,20 +226,83 @@ ggplot(id, aes(x = Year, fill = sex)) +
 ###Preliminary Modeling
 
 ```{r}
-mod2012<-lm(Species.richness~lat2,data=specrich2012) #Sparse
+#Preliminary lat mods
+
+mod2012 <-lm(num_species~lat2,data=specrich2012) #Sparse
 summary(mod2012)
 
 #omitted 2013 model due to lack of viable data to form model
 
-mod2014<-lm(Species.richness~lat2,data=specrich2014)
+mod2014 <-lm(num_species~lat2,data=specrich2014)
 summary(mod2014)
 
-mod2015<-lm(Species.richness~lat2,data=specrich2015) #Sparse
+mod2015 <-lm(numspecies~lat2,data=specrich2015) #Sparse
 summary(mod2015)
 
-mod2016<-lm(Species.richness~lat2 + Timediff,data=specrich2016)
+mod2016 <-lm(num_species~lat2,data=specrich2016)
 summary(mod2016)
-anova(lm(Species.richness~lat2, data = specrich2016), mod2016)
 
-#Fitting a model with the time difference offset for the 2016 model significantly improves the model however the problem is that when we usethe offset, we reduce the complexity of the data since the species richness is calculated based on unique plot ids, but time diff is different for each sample.  
+modallyears <- lm(num_species~lat2, data=specrich)
+summary(modallyears)
+
+modyearfactor <- lm(num_species~lat2 + Year, data = specrich)
+summary(modyearfactor)
+
+#Precipitation Models
+precip.mod2012 <- lm(num_species~lat2 + Precipmm, data = specrich2012)
+summary(precip.mod2012)
+
+precip.mod2014 <- lm(num_species~lat2 + Precipmm, data = specrich2014)
+summary(precip.mod2014)
+
+precip.mod2015 <- lm(num_species~lat2 + Precipmm, data = specrich2015)
+summary(precip.mod2015)
+
+precip.mod2016 <- lm(num_species~lat2 + Precipmm, data = specrich2016)
+summary(precip.mod2016)
+
+precip.modallyears <- lm(num_species~lat2 + Precipmm, data=specrich)
+summary(precip.modallyears)
+
+precip.modyearfactor <- lm(num_species~lat2 + Precipmm + Year, data = specrich)
+summary(precip.modyearfactor)
+
+#Max Temp Models
+maxtemp.mod2012 <- lm(num_species~lat2 + Max.TempC, data = specrich2012)
+summary(maxtemp.mod2012)
+
+maxtemp.mod2014 <- lm(num_species~lat2 + Max.TempC, data = specrich2014)
+summary(maxtemp.mod2014)
+
+maxtemp.mod2015 <- lm(num_species~lat2 + Max.TempC, data = specrich2015)
+summary(maxtemp.mod2015)
+
+maxtemp.mod2016 <- lm(num_species~lat2 + Max.TempC, data = specrich2016)
+summary(maxtemp.mod2016)
+
+maxtemp.modallyears <- lm(num_species~lat2 + Max.TempC, data = specrich)
+summary(maxtemp.modallyears)
+
+maxtemp.modyearfactor <- lm(num_species~lat2 + Max.TempC + Year, data = specrich)
+summary(maxtemp.modyearfactor)
+
+#Maxtemp and precip combination models
+
+combo.mod2012 <- lm(num_species~lat2 + Precipmm + Max.TempC, data = specrich2012)
+summary(combo.mod2012)
+
+combo.mod2014 <- lm(num_species~lat2 + Precipmm + Max.TempC, data = specrich2014)
+summary(combo.mod2014)
+
+combo.mod2015 <- lm(num_species~lat2 + Precipmm + Max.TempC, data = specrich2015)
+summary(combo.mod2015)
+
+combo.mod2016 <- lm(num_species~lat2 + Precipmm + Max.TempC, data = specrich2016)
+
+combo.modallyears <- lm(num_species~lat2 + Precipmm + Max.TempC, data = specrich)
+summary(combo.modallyears)
+
+combo.modyearfactor <- lm(num_species~lat2 + Precipmm + Max.TempC + Year, data = specrich)
+summary(combo.modyearfactor)
+
 ```
