--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -23,6 +23,7 @@ domain.df = read.csv("~/mosquito-intern/data/domainid_siteid_match.csv")
 source('~/mosquito-intern/code/get_NEON_location.R')
 
 
+
 #Creation of a vector with only the unique PlotIDs
 uniquePlotIDs<-unique(trap$plotID)
 
@@ -51,11 +52,13 @@ trap <- merge(x = latlon.df, y = trap, by.y = "plotID", by.x = "uniquePlotIDs") 
 trap$lat2<-ifelse(is.na(trap$lat)==TRUE, trap$pdaDecimalLatitude,trap$lat)
 trap$lon2<-ifelse(is.na(trap$lon)==TRUE, trap$pdaDecimalLongitude,trap$lon)
 
-#Merging trap df with sort df
-trap<- merge(x = sort[,c("sampleID", "setDate", "subsampleID", "totalWeight", "subsampleWeight", "bycatchWeight")], y = trap, by.y = c("sampleID", "setDate"), by.x = c("sampleID", "setDate"), all.y = T)
-
 #Creating a dataframe with only the unique plotIDs and lat2 lon2 data for merging
-uniquetrap<-trap[!duplicated(trap[,7]),c("uniquePlotIDs","lat2","lon2")]
+uniquetrap<-trap[!duplicated(trap[,1]),c("uniquePlotIDs","lat2","lon2")]
+
+# Merge ID with sort
+cols = colnames(sort)[!colnames(sort)%in%colnames(id)]
+id <- left_join(id, sort[, c('subsampleID', cols)], 
+                by = "subsampleID")
 
 #Changing plotID from factor to character to prevent errors
 id$plotID<-as.character(id$plotID)
@@ -63,8 +66,15 @@ id$plotID<-as.character(id$plotID)
 #Merging id df with lat2 lon2 data
 id <- merge(x = uniquetrap, y = id, by.y = "plotID", by.x = "uniquePlotIDs")
 
-#Merge with trap so that id df contains samples where no mosquitos were found
-id <- merge(x = trap[,c(1, 2:7,18,24,35,36)], y = id, by.y = c('subsampleID', 'lat2', 'lon2', 'uniquePlotIDs'), by.x = c('subsampleID', 'lat2', 'lon2', 'uniquePlotIDs'), all.x = T)
+# Get zero traps from trapping
+new_trap<- trap[!trap$sampleID %in% id$sampleID & trap$targetTaxaPresent=="N",]
+
+#Add columns in new_trap that weren't present in the ID table then add new_trap to ID table
+new_trap <- new_trap[, colnames(new_trap)[colnames(new_trap)%in%colnames(id)]]
+
+new_trap[, colnames(id)[!colnames(id)%in%colnames(new_trap)]]<-NA
+
+id <- rbind(id,new_trap)
 
 #Extracting year information for id
 id$Year<-substr(id$collectDate,1,4)
@@ -73,9 +83,9 @@ id$Year<-substr(id$collectDate,1,4)
 id$Year<-as.factor(id$Year)
 
 #Exctracting date information for id
-id$Date<-substr(id$setDate.x,1,10)
+id$Date<-substr(id$setDate,1,10)
 
-#Broad Site ID variable
+#Broad Site ID variable CHANGE TO REFLECT OTHER CODE I.E UNQUEPLOTIDS
 id$siteID<-substr(id$uniquePlotIDs,1,4)
 
 #merging id with temp data
@@ -94,6 +104,7 @@ names(id)[3]<-"Precipmm"
 
 #Merge with domain info.
 id <- merge(x = domain.df, y = id, by.y = "siteID", by.x = "siteid", all.y = TRUE)
+id$domainid <- as.character(id$domainid)
 
 #Working on time difference offset variable 
 
@@ -102,12 +113,17 @@ tally(substr(id$setDate,9,10)==substr(id$collectDate,9,10))
 tally(substr(id$setDate,9,10)!=substr(id$collectDate,9,10))
 
 #Variable that contains the time difference between set and collection in hours
-id$Timediff<-ifelse(substr(id$setDate.x,9,10)!=substr(id$collectDate,9,10), 24 - ((as.numeric(substr(id$setDate.x,15,16))/60)+(as.numeric(substr(id$setDate.x,12,13)))) + ((as.numeric(substr(id$collectDate,15,16))/60)+(as.numeric(substr(id$collectDate,12,13)))),((as.numeric(substr(id$collectDate[8],15,16))/60)+(as.numeric(substr(id$collectDate[8],12,13)))) - ((as.numeric(substr(id$setDate.x[8],15,16))/60)+(as.numeric(substr(id$setDate.x[8],12,13)))))
-
+id$Timediff<-ifelse(substr(id$setDate,9,10)!=substr(id$collectDate,9,10), 24 - ((as.numeric(substr(id$setDate,15,16))/60)+(as.numeric(substr(id$setDate,12,13)))) + ((as.numeric(substr(id$collectDate,15,16))/60)+(as.numeric(substr(id$collectDate,12,13)))),((as.numeric(substr(id$collectDate[8],15,16))/60)+(as.numeric(substr(id$collectDate[8],12,13)))) - ((as.numeric(substr(id$setDate[8],15,16))/60)+(as.numeric(substr(id$setDate[8],12,13)))))
 
 #Changing Time diff to numeric
 id$Timediff <- abs(as.numeric(id$Timediff))
 
+#Creation of sample Multiplier
+id$sampleMultiplier <- ifelse(is.na(id$bycatchWeight)==F,id$totalWeight/(id$subsampleWeight-id$bycatchWeight), NA)
+id$sampleMultiplier <- ifelse(id$sampleMultiplier==Inf, NA, id$sampleMultiplier)
+
+#Creation of New individual Count with Multiplier
+id$newindividualCount <-ifelse(is.na(id$sampleMultiplier)==F, round(id$individualCount*id$sampleMultiplier), NA)
 
 #Year subsets
 id2012<-id[id$Year==2012,]
@@ -118,7 +134,8 @@ id2016<-id[id$Year==2016,]
 
 ```
 
-###Species Richness Dataframes
+
+###Species Richness Vignette
 
 ```{r}
 #If I merge dataframes then it automatically removes the null plot ID
@@ -142,10 +159,11 @@ specrich2016 <- specrich[specrich$Year==2016,]
 
 ```
 
-###Some Data Poking (Exploring)
+
+
+###Julian Date of first occurence versus lat
 
 ```{r}
-library(scales)
 #Over representation of females in ID sample
 tally(id$sex)
 
@@ -159,9 +177,14 @@ table(id$Year,id$scientificName=="Aedes albopictus")
 tally(id$scientificName)
 
 #Tracking number of sites where Ae. Albopictus has been identified
-albo2014<- id2014[id2014$scientificName=="Aedes albopictus",]
-albo2015<- id2015[id2015$scientificName=="Aedes albopictus",]
-albo2016<- id2016[id2016$scientificName=="Aedes albopictus",]
+albo<- id[grepl("Aedes albopictus", id$scientificName),]
+albo2014<- id2014[grepl("Aedes albopictus", id2014$scientificName),]
+albo2015<- id2015[grepl("Aedes albopictus", id2015$scientificName),]
+albo2016<- id2016[grepl("Aedes albopictus", id2016$scientificName),]
+
+#ex of previous code
+#albo <- id[id$scientificName=="Aedes albopictus",]
+
 
 length(unique(albo2014$uniquePlotIDs)) #18
 length(unique(albo2015$uniquePlotIDs)) #9
@@ -170,18 +193,65 @@ length(unique(albo2016$uniquePlotIDs)) #45
 #Preliminary findings suggest large amount of fluctuation in number of sites, could be due to sampling procedure or changes in biotic variables at each site
 
 #Sum of Ae. albopictus for each year
-sum(albo2014$individualCount) # 64
-sum(albo2015$individualCount) # 40
-sum(albo2016$individualCount) # 308
+sum(na.omit(albo2014$newindividualCount)) # 69
+sum(na.omit(albo2015$newindividualCount)) # 43
+sum(na.omit(albo2016$newindividualCount)) # 433
 
 #Proportion of Ae. albopictus relative to total number collected by year
-sum(albo2014$individualCount)/sum(complete.cases(id2014$individualCount)) #0.00605
-sum(albo2015$individualCount)/sum(complete.cases(id2015$individualCount)) #0.04264
-sum(albo2016$individualCount)/sum(complete.cases(id2016$individualCount)) #0.01281
+sum(complete.cases(albo2014$newindividualCount))/sum(complete.cases(id2014$newindividualCount)) 
+sum(complete.cases(albo2015$newindividualCount))/sum(complete.cases(id2015$newindividualCount)) 
+sum(complete.cases(albo2016$newindividualCount))/sum(complete.cases(id2016$newindividualCount)) 
 
 #Slight increase in proportion of Ae. Albopictus caught over time relative to total number of mosquitos caught exception of 2016. 
 
+
+############## Culex tarsalis #########################
+
+#Instances of Cu. tarsalis by Year 
+table(id$Year, id$scientificName=="Culex tarsalis")
+
+#Tracking number of sites where Cu. tarsalis has been identified
+tars<- id[grepl("Culex tarsalis", id$scientificName),]
+tars2013<- id2013[grepl("Culex tarsalis", id2013$scientificName),]
+tars2014<- id2014[grepl("Culex tarsalis", id2014$scientificName),]
+tars2016<- id2016[grepl("Culex tarsalis", id2016$scientificName),]
+
+#Examples of tars<- id[id$scientificName=="Culex tarsalis",]
+
+#Create df for domain ID and native code NEED HELP OPTIMIZING THIS UGLY UGLY CODE
+tarstax <- unlist(c(taxonomy.df[grepl("Culex tarsalis", taxonomy.df$scientificName), grepl("NativeStatusCode", colnames(taxonomy.df))])[c(5:15,17:23)])
+
+tarstax.df <-data.frame("domainID"= unique(domain.df$domainid), "DomainNativeStatus"= tarstax)
+
+#Merge Cu. tarsalis taxonomy df with tars df
+tars <- merge(x = tarstax.df, y = tars, by.x = "domainID", by.y = "domainid")
+
+#number of sites of appearance
+length(unique(tars$uniquePlotIDs)) #160
+length(unique(tars2013$uniquePlotIDs)) #35
+length(unique(tars2014$uniquePlotIDs)) #40
+length(unique(tars2016$uniquePlotIDs)) #115
+
+
+#Sum of Cu. tarsalis for each year
+sum(tars2013$newindividualCount) # 1,690
+sum(tars2014$newindividualCount) # 17,432
+sum(na.omit(tars2016$newindividualCount)) # 11,827
+
+#Proportion of Cu. tarsalis relative to total number collected by year
+sum(complete.cases(tars2013$newindividualCount))/sum(complete.cases(id2013$newindividualCount)) 
+sum(complete.cases(tars2014$newindividualCount))/sum(complete.cases(id2014$newindividualCount)) 
+sum(complete.cases(tars2016$newindividualCount))/sum(complete.cases(id2016$newindividualCount)) 
+
+#Subsets containing only the rows where Cu. tarsalis was first sampled in each geographic subdivision
+tars.firstdomain <- tars[match(unique(tars$domainID), tars$domainID),]
+tars.firstsite <- tars[match(unique(tars$siteid), tars$siteid),]
+tars.firstplot <- tars[match(unique(tars$uniquePlotIDs), tars$uniquePlotIDs),]
+
+ 
 ```
+
+############################ Working until this point ###########################################
 
 ###Graphs and Visualizations
 
